--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.10.2",
     "react-admin": "^2.9.7",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
