chore: Upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^5.1.0",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "4.6.0",
-    "react": "^16.10.2",
-    "react-admin": "4.6",
+    "react": "18.2.0",
+    "react-admin": "4.13.0",
     "react-admin-import-csv": "^4.0.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-hook-form": "^7.43.9",
+    "react-is": "^16.9.0 || ^17.0.0 || ^18.0.0",
+    "react-router": "^6.1.0",
+    "react-router-dom": "^6.1.0",
     "react-scripts": "3.2.0",
+    "typescript": ">=2.8.0 || >= 3.2.0-dev || >= 3.3.0-dev || >= 3.4.0-dev || >= 3.5.0-dev || >= 3.6.0-dev || >= 3.6.0-beta || >= 3.7.0-dev || >= 3.7.0-beta",
     "use-file-picker": "^1.5.1",
     "uuid": "^8.3.2"
   },
